fix(ui): stick scrollbar to right edge by removing max-width from scroll container

--- a/src/javascript/CustomGptSettings/CustomGptSettings.scss
+++ b/src/javascript/CustomGptSettings/CustomGptSettings.scss
@@ -19,7 +19,7 @@
 
 .cgpt_container {
     padding: 24px 32px;
-    max-width: 800px;
+    width: 100%;
     height: 100%;
     overflow-y: auto;
     box-sizing: border-box;
